--- a/calculatorsHome.html
+++ b/calculatorsHome.html
@@ -9,16 +9,35 @@
 </head>
 <body>
     <div class="navbar">
-       
-        <div class="icon"><img src="vector-calculator-icon.jpg" alt="Calculator" class="imagcal"/>
+
+        <div class="icon"><img src="vector-calculator-icon.jpg" alt="Calculator" class="imagcal" />
         </div>
         <div class="calcs">
-            <a href="IIC.html">
-                <div class="IIC hovergreen">Insulin Infusion Calculator for Non-DKA</div>
-            </a>
-            <a href="HIC.html">
-                <div class="HIC hovergreen">Heparin Infusion Calculator</div>
-            </a>
+            <div class="dropdownList">
+                <a href="#">
+                    <div class="IIC hovergreen">Insulin Infusion Calculator for Non-DKA
+                    </div>
+
+                </a>
+                <div class="dropdown-options">
+                    <a href="IICInitiation.html">Initiation</a>
+                    <a href="IICMaintenance.html">Maintenance</a>
+                  </div>
+            </div>
+            <div class="dropdownList">
+                <a href="#">
+                    <div class="IIC hovergreen" >Heparin Infusion Calculator
+                    </div>
+
+                </a>
+                <div class="dropdown-options">
+                    <a href="HICInitialization.html">Initialization</a>
+                    <a href="HICModification.html">Modification</a>
+                  </div>
+            </div>
+            <!-- <a href="HIC.html">
+                <div class="HIC hovergreen" style="color: green;">Heparin Infusion Calculator</div>
+            </a> -->
         </div>
     </div>
 
