--- a/IICMaintenance.html
+++ b/IICMaintenance.html
@@ -37,7 +37,7 @@
 
                 </a>
                 <div class="dropdown-options">
-                    <a href="HICInitialization.html" style="color: green;">Initialization</a>
+                    <a href="HICInitialization.html">Initialization</a>
                     <a href="HICModification.html">Modification</a>
                   </div>
             </div>
