--- a/HICModification.html
+++ b/HICModification.html
@@ -17,7 +17,7 @@
             </div>
             <div class="calcs">
                 <div class="dropdownList">
-                    <a href="IIC.html">
+                    <a href="#">
                         <div class="IIC hovergreen">Insulin Infusion Calculator for Non-DKA
                         </div>
 
