--- a/HICModification.html
+++ b/HICModification.html
@@ -25,7 +25,7 @@
                     <div class="dropdown-options">
                         <a href="IICInitiation.html">Initiation</a>
                         <a href="IICMaintenance.html">Maintenance</a>
-                      </div>
+                    </div>
                 </div>
                 <div class="dropdownList">
                     <a href="#">
@@ -36,7 +36,7 @@
                     <div class="dropdown-options">
                         <a href="HICInitialization.html">Initialization</a>
                         <a href="HICModification.html" style="color: green;">Modification</a>
-                      </div>
+                    </div>
                 </div>
                 <!-- <a href="HIC.html">
                     <div class="HIC hovergreen" style="color: green;">Heparin Infusion Calculator</div>
@@ -83,11 +83,24 @@
                 <input type="number" class="aptt" required>
 
             </div>
-            <div class="currcbg" style="text-align: center;">
+            <div class="currcbg rate" style="text-align: center;">
                 <label class="labels">Current Rate (m/hr)</label>
-
-                <input type="number" min="1" max="20" class="currRateH" required>
-
+                <div>
+                    <input type="number" class="currRateH" required>
+                    <div class="OyEIQ uSvLId" jsname="h9d3hd" aria-live="polite">
+                        <div class="EjBTad" aria-hidden="true">
+                            <svg aria-hidden="true" class="stUf5b LxE1Id" fill="currentColor" focusable="false"
+                                width="16px" height="16px" viewBox="0 0 24 24" xmlns="https://www.w3.org/2000/svg">
+                                <path
+                                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z">
+                                </path>
+                            </svg>
+                        </div>
+                        <div jsname="B34EJ">
+                            <span jsslot="">Contact relevant physician</span>
+                        </div>
+                    </div>
+                </div>
 
             </div>
             <div class="centeredbutton"><button class="blackbutt HICModificationbutton"
@@ -116,8 +129,8 @@
 
         <div class="resultsheadline">Results: </div>
 
-        <div class="resultsHIC" ></div>
-        <div class="resultsHIC" ></div>
+        <div class="resultsHIC"></div>
+        <div class="resultsHIC"></div>
 
 
 
