--- a/HICModification.html
+++ b/HICModification.html
@@ -45,14 +45,9 @@
         </div>
         <div id="inst">
             <div class="instructions">
-                Initiate insulin infusion if 2 consecutive CBG more than 180 mg/dL
+                Prepare Heparin by adding 5000 IU to 49 ml of normal saline (meet IU/ml)
             </div>
-            <div class="instructions">
-                Add 50 IU insulin + 50 cc Normal saline
-            </div>
-            <div class="instructions">
-                Before connecting, flush 20 cc infusion through all tubing
-            </div>
+            
         </div>
         <div id="initiation">
             <div class="init">Modification</div>
