--- a/HICInitialization.html
+++ b/HICInitialization.html
@@ -45,7 +45,7 @@
         </div>
         <div id="inst">
             <div class="instructions">
-                Prepare Heparin by adding 5000 IU to 49 ml of normal saline (meet IU/ml)
+                Prepare Heparin by adding 5000 IU to 49 ml of normal saline (100 IU/ml)
             </div>
             
         </div>
@@ -81,14 +81,14 @@
 
 
             <div class="currcbg" style="text-align: center; margin-top: 1.5rem;">
-                <label style="margin-right: 3rem; font-weight: bold;">Initial Bolus (ml): </label>
+                <label class="initResults" style="font-weight: bold;">Initial Bolus (ml): </label>
 
                 <label class="initbResult" style="font-weight: bolder; color: green;"></label>
 
             </div>
 
             <div class="currcbg" style="text-align: center;">
-                <label style="margin-right: 3rem; font-weight: bold;">Initial Rate (ml/hr): </label>
+                <label class="initResults" style="font-weight: bold;">Initial Rate (ml/hr): </label>
 
                 <label class="initrResult" style="font-weight: bolder; color: green;"></label>
 
