--- a/HICModification.html
+++ b/HICModification.html
@@ -45,7 +45,7 @@
         </div>
         <div id="inst">
             <div class="instructions">
-                Prepare Heparin by adding 5000 IU to 49 ml of normal saline (meet IU/ml)
+                Prepare Heparin by adding 5000 IU to 49 ml of normal saline (100 IU/ml)
             </div>
             
         </div>
